[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "balancer-bias"
version = "0.1.0"
description = "AI bias detection and correction CLI"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "google-generativeai>=0.8",
    "ollama>=0.3",
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.13",
    "jinja2>=3.1",
    "aiohttp>=3.9",
    "rich>=13.7",
]

[project.scripts]
balancer = "balancer.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["balancer*"]
